bir/static/style.css
:root {
  --bg-color: #f2f2f2;
  --form-bg-color: #f7f7f7;
  --light-bg-color: #fff;
  --fg-color: #505050;
  --pages-color: #e0e0e0;
  --thumb-color: #99ff99;
  --pages-read-color: #10ff10;
  --rating-star: #F2994A;
  --rating-empty: #E0E0E0;
  --finished-check: #00df00;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--bg-color);
}

.square-btn {
  color: var(--fg-color);
  padding: 8px 16px;
  border: none;
  text-transform: uppercase;
  letter-spacing: .09em;
  border-radius: 0px;
  background-color: var(--bg-color);
  text-decoration: none;
}

.square-btn:hover {
  filter: brightness(98%);
}

.navbar {
  display: flex;
  align-items: center;
  height: 60px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
  margin-bottom: 20px;
  background-color: white;
}

.title a,
.title a:link,
.title a:visited {
  font-size: 24px;
  margin: 0 20px 0 20px;
  text-decoration: none;
  color: var(--fg-color);
}

.login-control {
  margin-left: auto;
}

.login-control button, .login-control a {
  font-size: 20px;
  font-family: "Noto Sans", sans-serif;
  background-color: var(--light-bg-color);
  border: none;
  cursor: pointer;
  padding-right: 20px;
}

.login-control a {
  text-decoration: none;
  color: var(--fg-color);
  font-size: 20px;
}

.login-control a:hover {
  filter: brightness(110%);
}

.login-form label {
  display: none;
}

.login-form {
  font-family: "Noto Sans", sans-serif;
  display: none;
  position: fixed;
  top: 60px;
  right: 0px;
  border: 3px solid var(--bg-color);
  z-index: 9;
}

.login-container {
  max-width: 300px;
  padding: 10px;
  background-color: white;
}

.login-container input[type=text], .login-container input[type=password] {
  width: 100%;
  padding: 15px;
  margin: 5px 0 22px 0;
  border: none;
  background: var(--bg-color);
}

.login-container input[type=text]:focus, .login-container input[type=password]:focus {
  background-color: #ddd;
  outline: none;
}

.header {
  margin-top: 5px;
  margin-bottom: 5px;
}

.filters label {
  display: inline-block;
  background-color: var(--light-bg-color);
  border: 2px solid var(--bg-color);
  border-radius: 10px;
  white-space: nowrap;
  user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  transition: all .2s;
  padding: 1px 12px;
  cursor: pointer;
}

.filters label::before {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  content: "⨯";
  transform: rotate(-45deg);
  padding: 0px 2px;
  transition: transform .3s ease-in-out;
}

.filters input[type="checkbox"]:checked + label {
  background-color: var(--bg-color);
  transition: all .2s;
}

.filters input[type="checkbox"]:checked + label::before {
  content: "⨯";
  transform: rotate(0deg);
  transition: transform .2s ease-in-out;
}

.filters input[type="checkbox"] {
  position: absolute;
  opacity: 0;
}

.header-right {
  float: right;
}

.content {
  margin: 26px;
  padding: 10px;
  background-color: white;
}

.filters {
  display: inline;
}

.book-title {
  font-family: "Noto Sans", sans-serif;
  display: inline;
}

.book-info {
  font-family: "Noto Sans", sans-serif;
}

.rating-stars {
  margin-left: 10px;
  font-family: "Noto Sans", sans-serif;
  display: inline;
  color: var(--rating-star);
  font-size: 36px;
}

.rating-stars::after {
  color: #e0e0e0;
  content: attr(data-emptyrating);
}

.cover-img img {
  max-width: 200px;
  height: auto;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
  margin: 5px;
}

.category {
  font-family: sans-serif;
  font-size: 14px;
}

.add-form {
  max-width: 800px;
}

.add-form li {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.add-form li {
  margin: 10px;
}

.add-form input[type="file"] {
  margin-left: 10px;
}

.add-form-input {
  border: none;
  border-radius: 0px;
  background-color: var(--form-bg-color);
  padding: 10px;
  width: 100%;
}

.add-form select {
  border: none;
  border-radius: 0px;
  padding: 10px;
  width: 100%;
}

.add-form .pages {
  width: 5em;
  margin: 0 8px 0 8px;
  border: none;
  border-radius: 0px;
  background-color: var(--form-bg-color);
  padding: 10px;
}

.books {
  display: flex;
}

.book {
  flex: 1;
}

.slider {
  width: 100%;
  -webkit-appearance: none;
  appearance: none;
  height: 16px;
  background: var(--pages-color);
  outline: none;
  overflow: hidden;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 18px;
  height: 18px;
  background: var(--thumb-color);
  box-shadow: -100vw 0 0 100vw var(--pages-read-color);
  cursor: ew-resize;
  border-radius: 4px;
  border: none;
}

.slider::-moz-range-thumb {
  width: 20px;
  height: 20px;
  background: var(--thumb-color);
  cursor: pointer;
  border-radius: 4px;
  border: none;
}

.slider::-moz-range-progress {
  background-color: var(--pages-read-color);
  height: 16px;
}

.slider::-ms-fill-lower {
  background-color: var(--pages-read-color);
}

.autocomplete-item {
  margin: 2px;
  padding: 10px;
  border: 1px solid var(--bg-color);
}

.autocomplete-selected {
  background-color: var(--bg-color);
  font-weight: bold;
}

.rating input[type="radio"] {
  display: none;
}

.rating-selected {
  font-size: 30px;
  transition: all .2s ease;
  color: var(--rating-star);
  cursor: pointer;
}


.rating-label {
  font-size: 30px;
  cursor: pointer;
  transition: all .2s ease;
  color: var(--rating-empty);
}

.rating label:hover {
  color: var(--rating-star);
  transform: scale(1.3);
}

.rating input[type="radio"]:checked + label {
  color: var(--rating-star);
  cursor: pointer;
}

.progress {
  margin-top: 2px;
  margin-bottom: 2px;
  width: 100%;
  max-width: 250px;
}

.pages-label {
  display: none;
}

.finished-book {
  font-weight: bold;
  color: var(--finished-check);
}

.edit-links {
  color: var(--fg-color);
}

